hphp/hack/test/typecheck/stricter_consts/interface_class_1.bad.php.exp
File "interface_class_1.bad.php", line 8, characters 13-13:
Class `A` does not correctly implement all required members  (Typing[4340])
  File "interface_class_1.bad.php", line 8, characters 26-26:
  Some members are incompatible with those declared in type `I`
  File "interface_class_1.bad.php", line 9, characters 13-13:
  Non-abstract constants defined in an interface cannot be overridden when implementing or extending that interface.
  File "interface_class_1.bad.php", line 5, characters 13-13:
  You could make `X` abstract in `I`.
