hphp/hack/test/typecheck/stricter_consts/interface_class_1.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

interface I {
  const int X = 0;
}

final class A implements I {
  const int X = 1;
}
